高，稍微改了下worker

--- a/application/templates/senior/list_senior.html
+++ b/application/templates/senior/list_senior.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
 {% extends 'base1.html' %}
 {% block pagetitle %}
     高层用户列表 <small>senior list</small>
@@ -38,6 +44,7 @@
                             </tr>
                         {% endfor %}
                 </tbody>
+
             </table>
         </div>
     </div>
