--- a/application/templates/shopowner/list_shopowners.html
+++ b/application/templates/shopowner/list_shopowners.html
@@ -40,6 +40,46 @@
                             </tr>
                         {% endfor %}
                 </tbody>
+
+
+            <body>
+
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul class=flashes>
+        {% for message in messages %}
+            <li style="color: green">{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
+
+    <table border="1">
+    <thead>
+        <tr>
+            <td>#</td>
+            <td>用户名</td>
+            <td>姓名</td>
+            <td>性别</td>
+            <td>出生日期</td>
+            <td>详情</td>
+            <td>操作</td>
+        </tr>
+    </thead>
+    <tbody>
+    {% for user in users %}
+        <tr><td>{{ loop.index }}</td>
+            <td>{{ user.username }}</td>
+            <td>{{ user.name }}</td>
+            <td>{{ user.gender }}</td>
+            <td>{{ user.birthdate }}</td>
+            <td><a href="{{ url_for('profile',id=user.id) }}">查看</a></td>
+            <td><a href="{{ url_for('delete_user',id=user.id) }}">删除</a></td>
+        </tr>
+    {% endfor %}
+    </tbody>
+    </table>
+</body>
             </table>
         </div>
     </div>
